created category Marija

--- a/Fashionel/index.html
+++ b/Fashionel/index.html
@@ -20,7 +20,7 @@
       <p>Newest</p>
     </nav>
   </header>
-  <>
+  <main>
     <div class="hero-shot">
       <div class="hero-shot-inner">
         <p>Welcome to <img src="https://fashionel.mk/sites/all/themes/fashionel/logo.png" alt="logo" width="280"
@@ -62,13 +62,20 @@
       </div>
     </div>
 
-   <div class="category category-Marija"></div>
+    <div class="category category-Marija">
+      <div class="category-title">Accessorize Your Style</div>
+      <div class="category-images">
+        <img src="https://thewebster.com/media/catalog/product/5/B/5BC125_2BVU_Tan_01.jpg?quality=100&fit=bounds&height=367&width=275" alt="accessories">
+        <img src="https://thewebster.com/media/catalog/product/7/6/766926_3HAXB_Light_Grey_01.jpg?quality=100&fit=bounds&height=367&width=275" alt="accessories">
+        <img src="https://thewebster.com/media/catalog/product/5/F/5FS062_Turquoise_01.jpg?quality=100&fit=bounds&height=367&width=275" alt="accessories">
+      </div>
 
-  <footer>
-    <div class="social-media"></div>
-  </footer>
-  
+
+    </div>
+
+
   </main>
+  <footer></footer>
 </body>
 
 </html>
